<resources>
    <string name="app_name">Care Network</string>
    <string name="texto_novo">Outro texto!</string>
    <string name="username_hint">Usuário</string>
    <string name="password_hint">Senha</string>
    <string name="signin_button">Entrar</string>
    <string name="no_account">NÃO POSSUI CONTA?</string>
    <string name="create_account">Criar Conta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastro">Cadastro</string>
    <string name="preencha_as_informa_es_abaixo_para_finalizar_seu_cadastro">Preencha as informações abaixo para finalizar seu cadastro</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="idade">Idade</string>
    <string name="finalizar_cadastro">Finalizar cadastro</string>
    <string name="email">Email</string>
    <string name="senha_mais_de_6_caracteres">Senha (mais de 6 caracteres)</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="cpf">CPF</string>
    <string name="cep">CEP</string>
    <string name="senhas_nao_sao_iguais">As senhas não são iguais</string>
    <string name="preencha_todos_campos">Preencha todos os campos</string>
</resources>